# example-android-inferencing

./: .gitignore  README.md
Test_WearOS/app/: build.gradle.kts
Test_WearOS/app/src/main/cpp/: CMakeLists.txt  wearosinference.cpp
Test_WearOS/gradle/: libs.versions.toml
Test_camera/: .gitignore
Test_camera/app/: build.gradle.kts
Test_camera/app/src/androidTest/java/com/example/test_camera/: ExampleInstrumentedTest.kt
Test_camera/app/src/main/: AndroidManifest.xml
Test_camera/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Test_camera/app/src/main/java/com/example/test_camera/: MainActivity.kt
Test_camera/app/src/main/res/layout/: activity_main.xml
Test_camera/app/src/test/java/com/example/test_camera/: ExampleUnitTest.kt
Test_camera/gradle/: libs.versions.toml
Test_cpp/: .gitignore
Test_cpp/app/: build.gradle.kts
Test_cpp/app/src/main/: AndroidManifest.xml
Test_cpp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Test_cpp/app/src/main/java/com/example/test_cpp/: MainActivity.kt
Test_cpp/app/src/main/res/values/: strings.xml
android-data-collector/: .gitignore  README.md  REVIEW.md  gradle.properties  settings.gradle.kts
android-data-collector/.skills/edge-impulse-data-collection/: SKILL.md
android-data-collector/app/: build.gradle.kts
android-data-collector/app/src/main/: AndroidManifest.xml
android-data-collector/app/src/main/cpp/: CMakeLists.txt  eikws_native.cpp
android-data-collector/app/src/main/cpp/model-parameters/: model_metadata.h  model_variables.h
android-data-collector/app/src/main/cpp/tflite/: .gitignore
android-data-collector/app/src/main/cpp/tflite-model/: tflite_learn_42047_8.h  tflite_learn_42047_8.tflite
android-data-collector/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-data-collector/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-data-collector/app/src/main/res/xml/: file_paths.xml
android-data-collector/gradle/: libs.versions.toml
android-data-collector/gradle/wrapper/: gradle-wrapper.properties
android-data-collector/wearosdatalogger/: build.gradle.kts
android-data-collector/wearosdatalogger/src/main/: AndroidManifest.xml
android-data-collector/wearosdatalogger/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  splash_icon.xml
android-data-collector/wearosdatalogger/src/main/res/values/: strings.xml
example_QNN_accelerated_object_tracking/: README.md  local.properties  settings.gradle.kts
example_QNN_accelerated_object_tracking/app/: build.gradle.kts
example_QNN_accelerated_object_tracking/app/src/main/: AndroidManifest.xml  fetchqnnlibs.sh
example_QNN_accelerated_object_tracking/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
example_QNN_accelerated_object_tracking/app/src/main/cpp/tflite/: README.txt
example_QNN_accelerated_object_tracking/app/src/main/cpp/tflite/model-parameters/: model_metadata.h  model_variables.h
example_QNN_accelerated_object_tracking/app/src/main/cpp/tflite/tflite-model/: tflite_learn_650178_10.h  tflite_learn_650178_10.tflite
example_QNN_accelerated_object_tracking/app/src/main/res/layout/: activity_main.xml
example_QNN_accelerated_object_tracking/gradle/: libs.versions.toml
example_camera_inference/: README.md
example_camera_inference/Test_camera/app/src/main/: AndroidManifest.xml
example_camera_inference/Test_camera/app/src/main/cpp/: native-lib.cpp
example_camera_inference/app/: build.gradle.kts
example_camera_inference/app/src/main/res/values/: strings.xml
example_kws/: README.md
example_kws/app/src/main/cpp/: README.txt
example_kws_audio_spotting/: local.properties
example_kws_audio_spotting/app/: build.gradle.kts
example_kws_audio_spotting/app/src/main/: AndroidManifest.xml
example_kws_audio_spotting/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
example_kws_audio_spotting/app/src/main/cpp/model-parameters/: model_metadata.h  model_variables.h
example_kws_audio_spotting/app/src/main/cpp/tflite-model/: tflite_learn_42047_8.h  tflite_learn_42047_8.tflite
example_kws_audio_spotting/app/src/main/res/layout/: activity_main.xml
example_kws_audio_spotting/app/src/main/res/values/: ids.xml  strings.xml
example_motion_WearOS/: README.md  local.properties  settings.gradle.kts
example_motion_WearOS/app/: build.gradle.kts
example_motion_WearOS/app/src/main/cpp/: CMakeLists.txt  wearosinference.cpp
example_motion_WearOS/app/src/main/res/values/: strings.xml
example_motion_WearOS/gradle/wrapper/: gradle-wrapper.properties
example_static_buffer/: README.md  settings.gradle.kts
example_static_buffer/app/: build.gradle.kts
example_static_buffer/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
example_static_buffer/gradle/: libs.versions.toml
example_static_buffer/gradle/wrapper/: gradle-wrapper.properties
qnn-genai-speech_to_image/: local.properties
qnn-genai-speech_to_image/app/src/main/cpp/speech_to_image/src/: QnnCommon.h  QnnInterface.h  QnnOpDef.h  QnnTypes.h
qnn-genai-speech_to_image/speech_to_image/app/src/main/: fetchqnnlibs.sh
qnn-genai-speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/: CMakeLists.txt
qnn-genai-speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/src/: BuildId.hpp  QnnContext.h  QnnProperty.h  QnnSdkBuildId.h
qnn-genai-speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/src/GPU/: QnnGpuBackend.h  QnnGpuOpPackage.h
qnn-genai-speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/src/HTP/: QnnHtpContext.h
qnn-genai-speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/src/HTP/core/: interface.h  intrinsics.h  serialize_oplist.h  tile_extract.h
qnn-genai-speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/src/HTP/core/tens/: tensor_generator.h
qnn-genai-speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/src/LPAI/: QnnLpaiBackend.h  QnnLpaiCommon.h
qnn-genai-speech_to_image/speech_to_image/app/src/main/cpp/speech_to_image/src/System/: QnnSystemProfile.h
(+79 files in other folders)
